<resources>
    <string name="app_name">My Application</string>
    <string name="tab_text_1">Contact</string>
    <string name="tab_text_2">Gallery</string>
    <string name="tab_text_3">Tic Tac Toe</string>
    <string name="player1">Player 1 : 0</string>
    <string name="player2">Player 2 : 0</string>
    <string name="turn1">Player 1 Turn</string>
    <string name="turn2">Player 2 Turn</string>
    <string name="reset">Reset</string>
    <string name="add">Add Contact</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="back_to_list">back to list</string>
    <string name="share">SHARE</string>
    <string name="editor">EDITOR</string>
    <string name="crop_image">CROP IMAGE</string>
    <string name="save_image">SAVE IMAGE</string>
</resources>
